# pydead

./: .dockerignore  .gitignore  Cargo.toml  README.md
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: false_positive.yml
.github/workflows/: ci.yml  publish-marketplace.yml  release.yml
crates/pydead/: Cargo.toml
crates/pydead/src/: analyze.rs  config.rs  discover.rs  entry.rs  fix.rs  ignore.rs  lib.rs  main.rs  path_safety.rs  report.rs  resolve.rs  rules.rs  symbols.rs
crates/pydead/src/parse/: expr.rs  mod.rs
crates/pydead/tests/: alembic_project.rs  azure_functions_v2.rs  pydantic_project.rs  sample_project.rs  sqlalchemy_project.rs
crates/pydead/tests/common/: mod.rs
docs/: publishing.md  rules.md
docs/images/: LICENSE  README.md  cli-find.raw.txt
fixtures/alembic_project/: EXPECTED.json
fixtures/alembic_project/app/: models.py
fixtures/azure_functions_v2/: EXPECTED.json  README.md  function_app.py
fixtures/pydantic_project/: EXPECTED.json  app.py  models.py
fixtures/sample_project/: EXPECTED.json  README.md
fixtures/sqlalchemy_project/: EXPECTED.json  geo_types.py  models.py
scripts/: check.sh  generate_readme_assets.py  install-hooks.sh  install.sh
scripts/screenshots/: Dockerfile  README.md  capture-cli-xterm.sh  capture-codeserver.mjs  capture-docker.mjs  package-lock.json  package.json  render_terminal.py  run-docker.sh
vscode-extension/: .vscodeignore  LICENSE  LICENSE-ICONS.md  README.md  package-lock.json  package.json
vscode-extension/src/: client.ts  diagnostics.ts  extension.ts  keep.ts  reportIssue.ts
(+18 files in other folders)
