[package]
name = "pydead"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-file dead code finder for Python (functions, classes, methods, module-level variables)"
readme = "../../README.md"

[[bin]]
name = "pydead"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
globset = "0.4"
ignore.workspace = true
rayon.workspace = true
rustpython-parser.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"
